Project Hashtag/wwwroot/css/site.css
/* ... */
.popupForm {
    width: 70%;
    padding: 1em;
    border-radius: 5px;
    margin: 0 auto 1em auto;
    background-color: rgba(251, 38, 38, 0.508);
    display: grid;
    grid-template: "a a" "b c" /1fr 1fr;
    border: 1px solid rgba(251, 38, 38, 0.908);
}

.popupForm p {
    text-align: center;
    grid-area: a;
    margin-bottom: 0.4em;
}

.popupForm form {
    grid-area: b;
    position: relative;
}

.popupForm form button {
    position: absolute;
    right: 0;
}

.popupForm > button {
    grid-area: c;
}


.popupForm button {
    width: 4em;
    height: 2em;
    background-color: #F0F7EE;
    border: none;
    color: black;
    margin: 0 1em 0 1em;
    padding: 0;
    border-radius: 4px;
    transition: all 200ms ease;
}

.popupForm button:hover {
    transform: translateY(-0.2em);
    background-color: #F0F7EE;
}


.postProfile {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 0.4em;
    padding-bottom: 1em;
    position: relative;
    z-index: 3;
}



.pic-top {
    width: 40px;
    height: 40px;
    border-radius: 50%;
    object-fit: cover;
}

.postProfile .pic-top {
    margin-right: 0.8em;
}

.postProfile p {
    font-size: 12px;
    opacity: 0.8;
}

.postProfile a {
    text-decoration: none;
    color: #f1dba7;
}

.postProfile .profilePic {
    margin-right:10px;
}

.postProfileBox {
    display: inherit;
    align-items: center;
    padding: 7px;
    border-radius:7px;
}


.postProfileBox:hover {
    background-color: #45464a;
    transition: all 200ms ease;
    color: #dbb84e;
}

.image {
    width: 85%;
    display: flex;
    justify-content: center;
    align-items: center;
    margin: auto;
    height: clamp(100px, 100%, 500px);
    border: 1px solid  grey;
    border-radius: 10px;
    background-color: #1f2023;
    overflow: hidden;
}

.image img {
    max-width: 100%;
    max-height: 100%;
}

.postText {
    width: 74%;
    margin: auto;
}

.interaction {
    display: flex;
    width: 77%;
    margin: 1em auto 0 auto;
}

.interaction form {
    display: flex;
    color: #c2cdcd;
    min-width: 35px;
}

.interaction a {
    color: #c2cdcd;
    transition: all 200ms ease;
    min-width: 35px;
    margin-left: 0.4em;
    padding: 0.3em;
    border: 4px solid transparent;
    border-radius: 12px;
}

.interaction form label {
    background-image: url(..//like.png);
    background-size: 50%;
    background-repeat: no-repeat;
    background-size: 50%;
    background-position: 20% 50%;
    display: flex;
    border: 4px solid transparent;
    padding: 0.3em;
    border-radius: 12px;
    align-items: center;
    transition: all 200ms ease;
}


.interaction form p {
    margin-left: 1.5em;
    margin-top: 0.2em;
    font-size: 14px;
}

.interaction a p {
    margin-left: 1.4em;
    margin-top: 0.2em;
    font-size: 14px;
}

.interaction #like:hover {
    cursor: pointer;
    color: #d91670;
    background-image: url(..//likehover.png);
    background-color: rgba(217, 22, 113, 0.2);
    border-color: rgba(217, 22, 113, 0.2);
}

.interaction form .liked {
    background-image: url(..//likeliked.png) !important;
}

.comments {
    background-image: url(..//comment.png);
    background-repeat: no-repeat;
    background-size: contain;
    display: flex;
    width: 25px;
}

.interaction .commentContainer:hover > div {
    background-image: url(..//commenthover.png);
}

.interaction a:hover {
    color: #1d9bf0;
    background-color: rgba(29, 156, 240, 0.2);
    border-color: rgba(29, 156, 240, 0.2);
}

.interaction form .tags{
    background-image: url(..//hashtag.png);
    background-size: 25px;
    background-repeat: no-repeat;
    background-position: 0% 50%;
    overflow:visible;
    display: flex;
    border: 4px solid transparent;
    border-radius: 12px;
    align-items: center;
    transition: all 200ms ease;
}

.interaction .tags:hover {
    cursor: pointer;
    color: #c2cdcd;
    background-color: rgb(213,175,52, 0.2);
    border-color: rgb(213,175,52, 0.2);
}

.interaction a p{
    margin-left: 0em;
}

.interaction button {
    display: none;
}

.interaction a {
    display: flex;
    text-decoration: none;
}

.commentSectionText {
    width: 90%;
    color: #c2cdcd;
    font-size: 14px;
    margin: 2em auto 0.5em auto;
    border-bottom: 1px solid grey;
    position: relative;
}

.commentSectionText a {
    text-decoration: none;
    font-style: italic;
    position: absolute;
    right: 0;
    color: #1d9bf0;
}

#comment {
    display: flex;
    gap: 1em;
    width: 90%;
    margin: auto;
}

#comment .commentText {
    background-color: #45464a;
    margin-top: 5px;
    padding: 0.5em;
    border-radius: 8px;
    min-width: 8em;
    font-size: 14px;
    max-width: 18em;
    word-wrap: break-word;
}

#comment .commentText a {
    text-decoration: none;
    color: #f1dba7;
    transition: all 100ms ease;
}

#comment .commentText a:hover {
    color: #d5af34;
}

.commentTime {
    font-size: 12px;
    color: #c2cdcd;
    margin: 0.3em 0 0.3em 5.6em;
}

#postComment {
    display: flex;
    gap: 0.4em;
    width: 95%;
    margin: 0 0 0 auto;
}

#postComment .pic-top, .commentProfilePic img {
    width: 25px;
    height: 25px;
    margin-top: 10px;
}

#postComment button {
    width: 6.5em;
    height: 2em;
    margin-top: 10px;
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: #dbb84e;
}

#postComment textarea {
    resize: none;
    margin: 10px 0 10px 0 ;
    width: 70%;
    border: none;
    background-color: #45464a;
    color:white;
    padding: 5px;
    border-radius: 5px;
}

#postComment textarea:focus {
    outline: none;
}

/*

Report button styling

*/

.report > button {
    visibility: hidden;
}

.report {
    width: 40px;
    height: 40px;
    background-image: url(../report-flag.png);
    background-size: 60%;
    background-position: center;
    background-repeat: no-repeat;
    position: absolute;
    opacity: 0.6;
    top: 0;
    right: 0;
    transition: all 200ms ease;
}
/* ... */

